# kuznix-tui-de

./: .gitignore  README.md  meson.build
.github/workflows/: build.yml
debian/: README.Debian.ex  README.source.ex  changelog  control  debhelper-build-stamp  files  kuznix-tui-de.cron.d.ex  kuznix-tui-de.substvars  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
debian/.debhelper/kuznix-tui-de/: dbgsym-build-ids
debian/.debhelper/kuznix-tui-de/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/kuznix-tui-de/dbgsym-root/usr/share/doc/: kuznix-tui-de-dbgsym
debian/kuznix-tui-de/DEBIAN/: control  md5sums
debian/kuznix-tui-de/usr/share/doc-base/: kuznix-tui-de.kuznix-tui-de
debian/kuznix-tui-de/usr/share/doc/kuznix-tui-de/: copyright
debian/upstream.ex/: metadata.ex
src/: main.cpp  meson.build
